<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:id="@+id/layout_transfer"
    tools:context="com.linkage.ethsample.TransactionActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tv_node"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ethereum_client"
            android:text="http://192.168.32.32:8545"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fromName"
            android:text="From Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:gravity="left"
            style="?android:attr/textViewStyle"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/toAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_address"
            android:text="0x9b4bb9459ddf9b2fc645a76f208fbbdd64d28afa"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_amount"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_transfer"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_transfer"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>
